@@ -3,7 +3,7 @@
 // ## BEGIN COPYRIGHT, LICENSE AND WARRANTY NOTICE ##
 // SOFTWARE NAME: eZ Varnish Login
 // SOFTWARE RELEASE: 1.x
-// COPYRIGHT NOTICE: Copyright (C) 1999-2008 eZ Systems AS
+// COPYRIGHT NOTICE: Copyright (C) 1999-2009 eZ Systems AS
 // SOFTWARE LICENSE: GNU General Public License v2.0
 // NOTICE: >
 //   This program is free software; you can redistribute it and/or
@@ -28,9 +28,10 @@ class ezvloginInfo
 {
     static function info()
     {
+        $eZCopyrightString = 'Copyright (C) 1999-' . date('Y') . ' eZ Systems AS / ar@ez.no, jr@ez.no';
         return array( 'Name'      => 'eZ Varnish Login',
                       'Version'   => '1.2.0',
-                      'Copyright' => 'Copyright (C) 2008 eZ Systems AS / ar@ez.no, jr@ez.no',
+                      'Copyright' => $eZCopyrightString,
                       'License'   => 'GNU General Public License v2.0',
                     );
     }
