@@ -27,3 +27,4 @@ eZVlogin CHANGELOG
 + Added support for view_parameters in vlogin/edit
 + Fixed redirection to user/register in vlogin/login
 + Added support for inter server sso (when several servers run on same domain behind load balancer)
++ Synced vlogin with user module in 4.1, merging #14301 and #9275
